--- a/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
@@ -40,7 +40,7 @@
                         <strong>Tình trạng phương tiện: </strong>
                         <div class="col-md-10">                           
                             <select class="form-control" name="tinhtrang">
-                                <option>----Chọn tình trạng phương tiện----</option>
+                                <option selected="@Model.TinhTrang">@Model.TinhTrang</option>
                                 <option>Sẵn sàng</option>
                                 <option>Bảo trì</option>
                                 <option>Sử dụng</option>
