--- a/Test02/Views/GiaoHang/DanhSachPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachPhuongTienGiaoHang.cshtml
@@ -91,3 +91,18 @@
         </div>
     </div>
 </div>
+
+<script>
+    //In dữ liệu
+    function printDiv(divName) {
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+
+    }
+</script>
