--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -188,5 +188,21 @@
         }
 
     </script>
+
+
+    <script>
+        //In dữ liệu
+        function printDiv(divName) {
+            var printContents = document.getElementById(divName).innerHTML;
+            var originalContents = document.body.innerHTML;
+
+            document.body.innerHTML = printContents;
+
+            window.print();
+
+            document.body.innerHTML = originalContents;
+
+        }
+    </script>
 </body>
 </html>
