--- a/Test02/Views/PhongKho/NhapKho.cshtml
+++ b/Test02/Views/PhongKho/NhapKho.cshtml
@@ -213,8 +213,8 @@
     </script>*@
 
 
-@* model confirm delete *@
-@*<script type="text/javascript">
+ @*model confirm delete*@ 
+<script type="text/javascript">
     $(document).ready(function () {
         var ConfirmDelete = function (MaPhieu) {
             $("#hiddenPhieu").val(MaPhieu);
@@ -236,4 +236,4 @@
     })
     
     
-</script>*@
+</script>
