--- a/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
@@ -1,76 +1,143 @@
-﻿@model IEnumerable<Test02.Models.ChiTietChuyenGiao>
-
-@using Test02.Models;
+﻿@model IEnumerable<Test02.Models.DonHang>
+@using Test02.Models
 @{
     ViewBag.Title = "ChiTietChuyenGiao";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_cg = "active";
     ViewBag.nd = "Chi tiết chuyến giao hàng";
+
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
-    List<ChiTietChuyenGiao> ct = db.ChiTietChuyenGiaos.ToList();
+    List<DonHang> dh = db.DonHangs.ToList();
 }
 
+
+
+<div>
+    <h4>ChuyenGiao</h4>
+    <hr />
+    @*<dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.MaNVLap)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.MaNVLap)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.NgayGiao)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.NgayGiao)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.TienThu)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TienThu)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.TrangThai)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TrangThai)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.NgayLap)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.NgayLap)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.KhuVucGiao)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.KhuVucGiao)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.PhuongTienGH.TenPT)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PhuongTienGH.TenPT)
+            </dd>
+
+        </dl>*@
+</div>
 
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-            <div class="tile-body" id="hd">
+            <div class="tile-body">
+                <div class="row element-button">
 
-                <h3 style="text-align:center">CHI TIẾT CHUYẾN GIAO HÀNG</h3>
+                    @*<div class="col-sm-2">
+                <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
+            </div>*@
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" title="In" onclick="printDiv('printMe')">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+                </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-
-                    @foreach (var item in Model)
-                    {
-                        @*<a class="btn btn-danger" href="/GiaoHang/HuyChuyenGiao/@item.MaGH">Hủy chuyến</a>*@
-                        <p style="text-align:center">
-                            <span>
-                                @{
-                                    var cg = db.ChuyenGiaos.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
-                                    var dgh = db.ChiTietChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            </span>
-                        </p>
-                        <p>
-                            <strong>Mã giao hàng: </strong> @{
-                                var magh = db.ChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            @Html.DisplayFor(modelItem => magh.MaGH)
-                        </p>
-                        <p>
-                            <strong>Nhân viên giao hàng: </strong> @{
-                                var nvgh = db.ChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            @Html.DisplayFor(modelItem => nvgh.NhanVienGH.TenNV)
-                        </p>
-                        <p>
-                            <strong>Phương tiện giao hàng: </strong> @{
-                                var ptgh = db.ChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            @Html.DisplayFor(modelItem => ptgh.PhuongTienGH.MaPT) - @{var tenpt = db.ChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            @Html.DisplayFor(modelItem => tenpt.PhuongTienGH.TenPT)
-                        </p>
-                        <p>
-                            <strong>Khu vực giao: </strong> @{
-                                var kvg = db.ChuyenGiaos.Where(s => s.MaGH == cg.MaGH).FirstOrDefault();}
-                            @Html.DisplayFor(modelItem => kvg.KhuVucGiao)
-                        </p>
-
-                        <p>
-                            <a class="btn btn-outline-dark" href="/GiaoHang/ChinhSuaChuyenGiao/@item.MaGH"> Chỉnh sửa</a>
-                        </p>
-                        break;
-                    }
-
-                    <div class="row">
+                    <div class="row" id="printMe">
+                        <h2 style="margin-left:35%">CHI TIẾT CHUYẾN GIAO @TempData["magh"]</h2>
 
                         <div class="col-sm-12">
-                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                            @foreach (var item in Model)
+                            {
+                                <p style="text-align:center">
+                                    <span>
+                                        @{
+                                            var gh = db.DonHangs.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
+                                            var macg = db.ChuyenGiaos.Where(s => s.MaGH == gh.MaGH).FirstOrDefault();
+                                        }
+                                    </span>
+                                </p>
+                                <p>
+                                    <strong>Tên nhân viên giao: </strong> @{
+                                        var tendnv = db.NhanVienGHs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();}
+                                    @Html.DisplayFor(modelItem => tendnv.TenNV)
+                                </p>
+                                <p>
+                                    <strong>Số điện thoại nhân viên: </strong> @{
+                                        var sdt = db.NhanVienGHs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();}
+                                    @Html.DisplayFor(modelItem => tendnv.SDT)
+                                </p>
+                                <p>
+                                    <strong>Phương tiện: </strong> @{
+                                        var pt = db.PhuongTienGHs.Where(s => s.MaPT == macg.MaPT).FirstOrDefault();}
+                                    @Html.DisplayFor(modelItem => pt.MaPT)
+                                </p>
+                                <p>
+                                    <strong>Địa điểm giao: </strong>
+                                    @Html.DisplayFor(modelItem => macg.KhuVucGiao)
+                                </p>
+                                break;
+                            }
+                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0">
                                 <thead>
-                                    <tr role="row" style="text-align:center">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px;">Mã đơn hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" style="width: 100px;">Tên đại lý nhận</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" style="width: 100px;">Số điện thoại</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px;">Địa chỉ giao</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px;">Tình trạng thanh toán</th>
-                                        @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px;">Thành tiền</th>*@
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" style="width: 120px;">Tổng tiền thu</th>
-
+                                    <tr role="row">
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align:center">Mã đơn hàng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Ngày lên đơn</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 40px; text-align: center ">Mã đại lý </th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tên đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 190px; text-align: center ">Địa điểm giao hàng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Thành tiền</th>
+                                        @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Xếp đơn</th>*@
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -78,31 +145,45 @@
                                     }
                                     @foreach (var item in Model)
                                     {
+                                        <p style="text-align:center">
+                                            <span>
+                                                @{
+                                                    var gh = db.DonHangs.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
+                                                    var macg = db.ChuyenGiaos.Where(s => s.MaGH == gh.MaGH).FirstOrDefault();
+                                                }
+                                            </span>
+                                        </p>
                                         <tr>
                                             <td>
+
                                                 @Html.DisplayFor(modelItem => item.MaDH)
                                             </td>
                                             <td>
-                                                @{ var tendl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
-                                                @Html.DisplayFor(modelItem => tendl.DaiLy.TenDL)
+                                                @Html.DisplayFor(modelItem => item.NgayLap)
                                             </td>
                                             <td>
-                                                @{ var sdt = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
-                                                @Html.DisplayFor(modelItem => sdt.DaiLy.SDT)
-                                            </td>
-                                            <td>
-                                                @{ var diemgiao = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
-                                                @Html.DisplayFor(modelItem => diemgiao.DiemGiao)
-                                            </td>
-                                            <td>
-                                                @{ var tttt = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
-                                                @Html.DisplayFor(modelItem => tttt.TinhTrangThanhToan)
+                                                @Html.DisplayFor(modelItem => item.DaiLy.MaDL)
                                             </td>
 
-                                            @if (item.DonHang.TinhTrangThanhToan == "Đã thanh toán")
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.DaiLy.TenDL)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.DaiLy.SDT)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.DiemGiao)
+                                            </td>
+
+                                            <td>
+                                                @*@{ var tttt = db.DonHangs.Where(s => s.MaGH == item.MaGH).FirstOrDefault();}*@
+                                                @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                            </td>
+
+                                            @if (item.TinhTrangThanhToan == "Đã thanh toán")
                                             {
                                                 <td>
-                                                    @{var tien = string.Format("{0:0,0 vnđ}", item.DonHang.TongTien);
+                                                    @{var tien = string.Format("{0:0,0 vnđ}", item.TongTien);
                                                         @Html.DisplayFor(modelItem => tien)}
                                                 </td>
 
@@ -110,52 +191,55 @@
                                             else
                                             {
                                                 <td>
-                                                    @{ total += Convert.ToInt32(item.DonHang.TongTien);}
-                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.DonHang.TongTien);}
+                                                    @{ total += Convert.ToInt32(item.TongTien);}
+                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
                                                     @Html.DisplayFor(modelItem => ThanhTien)
                                                 </td>
                                             }
-                                        </tr>
 
+                                        </tr>
                                     }
-                                    <tr>
-                                        <th colspan="5">Tổng cộng hóa đơn:</th>
-                                        @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
-                                        <td>@Html.DisplayFor(modelItem => TongCong)</td>
-                                    </tr>
+                                </tbody>
+                                <tr>
+                                    <th colspan="6">Tổng cộng tiền thu:</th>
+                                    @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
+                                    <td>@Html.DisplayFor(modelItem => TongCong)</td>
+                                </tr>
                             </table>
                         </div>
-                    </div>
-                </div>
+                        <h5 style="margin-left:78%;" id="sample1">Người thực hiện giao</h5>
+                        <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
+                        <br />
+                        <br />
+                        <h6 style="margin-left:82%;" id="sample1">--------------</h6>
+                    </div>                    
+                </div>                
             </div>
-
-            <h5 style="margin-left:78%;" id="sample1">Người thực hiện giao</h5>
-            <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
-            <br />
-            <br />
-            <h6 style="margin-left:82%;" id="sample1">--------------</h6>
-
             <div class="row element-button">
                 <div class="col-sm-2">
-                    <a class="btn btn-success" href="/GiaoHang/ThemDonHangVaoChuyenGiao"> Thêm đơn hàng</a>
+                    <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh"]"><i class=""></i>Cập nhật trạng thái</a>
                 </div>
                 <div class="col-sm-2">
-                    <a class="btn btn-warning" title="In" onclick="myApp.printTable()">
-                        <i class="fas fa-print"></i> In dữ liệu
-                    </a>
-                </div>
-                @*<div class="col-sm-2">
-                        <a class="btn btn-outline-dark" href="/GiaoHang/ChinhSuaChuyenGiao"> Chỉnh sửa</a>
-                    </div>*@
-                @*<div class="col-sm-2">
-                        <a class="btn btn-danger" href="/GiaoHang/HuyChuyenGiao">Hủy chuyến</a>
-                    </div>*@
-                <div class="col-sm-2">
-                    <a class="btn btn-danger" type="button" title="Quay lại " href="/GiaoHang/DanhSachCacChuyenGiao"><i></i> Quay lại</a>
+                    <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachCacChuyenGiao/@TempData["magh"]"><i class=""></i> Quay lại</a>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
 
+
+
+<script>
+    //In dữ liệu
+    function printDiv(divName) {
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+
+    }
+</script>
