--- a/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
@@ -25,13 +25,13 @@
             @Html.HiddenFor(model => model.NgayLap)
             @Html.HiddenFor(model => model.TienThu)
 
-            <div class="form-group">
+            @*<div class="form-group">
                 <h5>Nhân viên giao hàng:</h5>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.MaNVGiao, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.MaNVGiao, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <h5>Phương tiện giao:</h5>
