--- a/Test02/Views/GiaoHang/ChinhsuaShipper.cshtml
+++ b/Test02/Views/GiaoHang/ChinhsuaShipper.cshtml
@@ -22,6 +22,7 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.MaNV)
+                    @Html.HiddenFor(model => model.MaGH)
                     <p>
                         <strong>Mã nhân viên: </strong>
                         @Html.DisplayFor(modelItem => Model.MaNV)
@@ -54,9 +55,8 @@
                     <div class="form-group">
                         <strong>Tình trạng làm việc: </strong>
                         <div class="col-md-10">
-                            @*@Html.EditorFor(model => model.TinhTrang, new { htmlAttributes = new { @class = "form-control" } })*@
-                            <select class="form-control" name="tinhtrang">                     
-                                <option>----Chọn nhân viên giao hàng----</option>
+                            <select class="form-control" name="tinhtrang">
+                                <option selected="@Model.TinhTrang">@Model.TinhTrang</option>
                                 <option>Sẵn sàng</option>
                                 <option>Đang giao hàng</option>
                                 <option>Nghỉ phép</option>
