--- a/Test02/Views/GiaoHang/DonGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DonGiaoHang.cshtml
@@ -8,38 +8,45 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
+@*<link href="~/Content/css/material-dashboard.css" rel="stylesheet" />*@
 
-<div class="row">
+    <div class="row">
+        <div class="col-md-6 col-lg-4">
+            <div class="widget-small danger coloured-icon">
+                <img src="~/Content/Img/logictic/delivery-truck.png" style="width:25%; margin-left:10px" />
+                <div class="info">
+                    <a href="/GiaoHang/DonHangHoan" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 55px">ĐƠN CHỜ GIAO</a>                    
+                    <div class="info">
+                        <p style="text-align:center" class="info-tong">Tổng số đơn chờ giao: <a style="font-size:15px; font-weight:bold; color:#ff0000">@TempData["TongDonChoGiao"]</a> đơn </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="col-md-6 col-lg-4">
-        <div class="widget-small danger coloured-icon">
-            <img src="~/Content/Img/logictic/delivery-truck.png" style="width:25%; margin-left:10px" />
-            <div class="info">
-                <a href="/GiaoHang/DonHangHoan" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 55px">ĐƠN CHỜ GIAO</a>
+        <div class="col-md-6 col-lg-4">
+            <div class="widget-small info coloured-icon">
+                <img src="~/Content/Img/logictic/fast-delivery.png" style="width:25%; margin-left:10px" />
+                <div class="info">
+                    <a href="/GiaoHang/DonDangGiao" style="text-align:center; color:#060054;font-weight:1000; margin-left:35px">ĐƠN ĐANG GIAO</a>
+                    <div class="info">
+                        <p style="text-align:center" class="info-tong">Tổng số đơn đang giao: <a style="font-size:15px; font-weight:bold; color:#ff0000">@TempData["TongDonDangGiao"]</a> đơn </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+            <div class="widget-small warning coloured-icon">
+                <img src="~/Content/Img/logictic/shipped.png" style="width:25%; margin-left:10px" />
+                <div class="info">
+                    <a href="/GiaoHang/DonDaGiao" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 45px">ĐƠN ĐÃ GIAO</a>
+                    <div class="info">
+                        <p style="text-align:center" class="info-tong">Tổng số đơn đã giao: <a style="font-size:15px; font-weight:bold; color:#ff0000">@TempData["TongDonDaGiao"]</a> đơn </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="col-md-6 col-lg-4">
-        <div class="widget-small info coloured-icon">
-            <img src="~/Content/Img/logictic/fast-delivery.png" style="width:25%; margin-left:10px" />
-            <div class="info">
-                <a href="/GiaoHang/DonDangGiao" style="text-align:center; color:#060054;font-weight:1000; margin-left:35px">ĐƠN ĐANG GIAO</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-6 col-lg-4">
-        <div class="widget-small warning coloured-icon">
-            <img src="~/Content/Img/logictic/shipped.png" style="width:25%; margin-left:10px" />
-            <div class="info">
-                <a href="/GiaoHang/DonDaGiao" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 45px">ĐƠN ĐÃ GIAO</a>
-            </div>
-        </div>
-    </div>
-
-
-</div>
 
 
 <div class="row">
@@ -52,13 +59,13 @@
                         <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
                     </div>
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
+                        <a class="btn btn-delete btn-sm print-file" title="In" onclick="printDiv('printMe')">
                             <i class="fas fa-print"></i> In dữ liệu
                         </a>
                     </div>
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                    <div class="row">
+                    <div class="row" id="printMe">
                         <h2 style="margin-left:35%">DANH SÁCH ĐƠN GIAO HÀNG</h2>
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -77,7 +84,7 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                        if (item.PhieuXuatKho == true && item.XuatHoaDon == true && item.TinhTrangGH != null && item.TrangThai == "Đã xét duyệt")
+                                        if (item.PhieuXuatKho == true && item.XuatHoaDon == true && item.TinhTrangGH != null && item.TrangThai == "Đã xét duyệt" && item.MaGH != null)
                                         {
                                             <tr>
                                                 <td>
@@ -178,3 +185,18 @@
         document.getElementById("#update-ttdh").disabled = true;
     }
 </script>*@
+
+<script>
+    //In dữ liệu
+    function printDiv(divName) {
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+
+    }
+</script>
