--- a/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
@@ -39,14 +39,13 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         @Html.HiddenFor(model => model.MaGH)
 
-                        <div class="form-group">
+                        @*<div class="form-group">
                             @Html.LabelFor(model => model.MaNVGiao, "Nhân viên giao", htmlAttributes: new { @class = "control-label col-md-12" })
                             <div class="col-md-12">
                                 @Html.EditorFor(model => model.MaNVGiao, new { htmlAttributes = new { @class = "form-control " } })
-                                @*@Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })*@
                                 @Html.ValidationMessageFor(model => model.MaNVGiao, "", new { @class = "text-danger" })
                             </div>
-                        </div>
+                        </div>*@
 
                         @*<div class="form-group">
                                 @Html.LabelFor(model => model.MaNVGiao, "Nhân viên hỗ trợ", htmlAttributes: new { @class = "control-label col-md-12" })
@@ -63,8 +62,6 @@
                                 @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
                             </div>
                         </div>
-
-
 
                         <div class="row justify-content-center">
                             <div class="col-sm-2">
